kubernetes/infrastructure/monitoring/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: monitoring
    labels:
        app: prometheus
        secrets-injection: enabled
