kubernetes/infrastructure/monitoring/prometheus.yml
kind: Service
apiVersion: v1
metadata:
    namespace: monitoring
    name: prometheus-service
spec:
    selector:
        app: prometheus
    ports:
        - name: promui
          protocol: TCP
          port: 9090
          targetPort: 9090
    type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus-deployment
    namespace: monitoring
    labels:
        app: prometheus
spec:
    replicas: 1
    selector:
        matchLabels:
            app: prometheus
    template:
        metadata:
            labels:
                app: prometheus
        spec:
            containers:
                - name: prometheus
                  image: prom/prometheus
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/prometheus/prometheus.yml
                        subPath: prometheus.yaml
                  ports:
                      - containerPort: 9090
            volumes:
                - name: config-volume
                  configMap:
                      name: prometheus-config
